tests/fixtures/invalid/pow_str_float.py
# Cannot call pow() with Str, Float
x = pow("hello", 1.0)
